# iceberg-rust

./: Cargo.toml  rustfmt.toml
.github/workflows/: bindings_python_ci.yml  release_python.yml
api/: crates.js  search-index.js  src-files.js
api/iceberg/: all.html  enum.ErrorKind.html  enum.TableRequirement.html  enum.TableUpdate.html  enum.ViewUpdate.html  index.html  macro.ensure_data_valid.html  sidebar-items.js  struct.Error.html  struct.MemoryCatalog.html  struct.MetadataLocation.html  struct.Namespace.html  struct.NamespaceIdent.html  struct.TableCommit.html  struct.TableCreation.html  struct.TableIdent.html  struct.ViewCreation.html
api/iceberg_cache_moka/: struct.MokaObjectCacheProvider.html
api/iceberg_catalog_glue/: constant.GLUE_CATALOG_PROP_CATALOG_ID.html  constant.GLUE_CATALOG_PROP_URI.html  constant.GLUE_CATALOG_PROP_WAREHOUSE.html  struct.GlueCatalog.html  struct.GlueCatalogBuilder.html
api/iceberg_catalog_hms/: enum.HmsThriftTransport.html  struct.HmsCatalog.html  struct.HmsCatalogBuilder.html
api/iceberg_catalog_loader/: struct.CatalogLoader.html
api/iceberg_catalog_rest/: all.html  constant.REST_CATALOG_PROP_DISABLE_HEADER_REDACTION.html  constant.REST_CATALOG_PROP_URI.html  constant.REST_CATALOG_PROP_WAREHOUSE.html  index.html  sidebar-items.js  struct.CommitTableRequest.html  struct.CommitTableResponse.html  struct.CreateNamespaceRequest.html  struct.CreateTableRequest.html  struct.ErrorModel.html  struct.ErrorResponse.html  struct.ListNamespaceResponse.html  (+13 more)
crates/playground/: Cargo.toml
crates/playground/src/: main.rs
(+1773 files in other folders)
