[package]
name = "playground"
edition.workspace = true
homepage.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
dotenv = "0.15.0"
futures-util = "0.3.31"
iceberg.workspace = true
iceberg-catalog-rest = { workspace = true }
tokio.workspace = true
